--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,38 @@
     src: url(MainFont.woff2);
 }
 body {
-    margin: 0px 50px;
+    margin: 0px 50px 0px 50px;
     font-family: SiteFont;
 }
 header {
     width: 100%;
     height: 80px;
+}
+
+h2 {
+    display: inline;
+    height: 80px;
+    vertical-align: middle;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: inline;
+    text-align: right;
+    float: right;
+    height: 80px;
+    vertical-align: middle;
+}
+li {
+    display: inline;
+}
+a {
+    text-decoration: none;
+}
+h1 {
+    width: 100%;
+    text-align: center;
 }
 .Container {
     width: 100%;
@@ -16,19 +42,34 @@ header {
     max-width: 1440px;
     margin: 0 auto;
 }
-.LeftSideHeader {
-    width:50%;
-}
-.RightSideHeader {
-    float: right;
-}
-
 .GetStarted {
     width: 100%;
-    height: 721px;
+    height: 70vh;
     border: 10px solid lightblue;
     background-image: url(ChairsNtable.png);
     background-repeat: no-repeat;
     background-position: 50% 120%;
-    overflow: visible;
+}
+.TextBox {
+    margin-top: 80px;
+}
+.GetStartedButton {
+    margin-top: 40px;
+    width: 100%;
+    text-align: center;
+}
+.SiteButton {
+  -webkit-border-radius: 4;
+  -moz-border-radius: 4;
+  border-radius: 4px;
+  font-family: SiteFont;
+  color: #ffffff;
+  font-size: 20px;
+  background: #fc3c56;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+.SiteButton:hover {
+  background: #ff0040;
+  text-decoration: none;
 }
