Began Profile Form Architecture
Side bar
Main form
Margins
Progress Bar

Next: Main five individual divs and hide them
After: Use JS to toggle which one is shown

--- a/Profile/styles.css
+++ b/Profile/styles.css
@@ -1,43 +1,47 @@
-ul.progress-bar {
-    height: 300px;
-    list-style: none;
+body {
+    height: 100vh;
     margin: 0;
-    padding: 0;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    overflow: hidden;
-    &::after {
-        content: "";
-        position: absolute;
-        top:0;
-        left:5px;
-        background: #777;
-        width: 5px;
-        height: 100vh;
-    }
-    li {
-        background: #FFF;
-        border-radius: 100px;
-        width: 15px;
-        height: 15px;
-        z-index: 1;
-        position: relative;
-        &.stop ~ li {
-            background: #777;
-            &::after {
-                height: 0;
-            }
-        }
-        &::after {
-            content: "";
-            position: absolute;
-            bottom: 0;
-            left: 5px;
-            background: #FFF;
-            width: 5px;
-            height: 100vh;
-        }
+}
+h1,h2,h3,h4,h5,h6 {
+    line-height: 0.6em;
+}
+.Container {
+    width: 100%;
+    height: 100%;
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.SideBar {
+    height: 100%;
+    width: 280px;
+    background-color: lightblue;
+    float: left;
+}
+.MainPage {
+    width: calc(100vw - 280px);
+    float: right;
+}
+.InnerContainer {
+    width: calc(100% - 100px);
+    margin: 40px auto;
+}
+.ProgressBarContainer {
+    background-color: lightgray;
+    margin-top: 35px;
+    width: 100%;
+    height: 4px;
+}
+.ProgressBarColor {
+    float: left;
+    width: calc(100% / 5);
+    height: 100%;
+    background-color: red;
+}
+
+
+@media only screen and (max-width: 960px) {
+    .SideBar {
+        width: 0px;
     }
 }
