--- a/Profile/styles.css
+++ b/Profile/styles.css
@@ -11,6 +11,7 @@ input[type="number"] {
     height: 40px;
     width: 60px;
 }
+
 .Container {
     width: 100%;
     height: 100%;
@@ -72,11 +73,31 @@ input[type="number"] {
   background: #ff0040;
   text-decoration: none;
 }
+.SiteButton {
+  -webkit-border-radius: 4;
+  -moz-border-radius: 4;
+  border-radius: 4px;
+  font-family: SiteFont;
+  color: #ffffff;
+  font-size: 20px;
+  background: #fc3c56;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  float: right;
+
+}
+.SiteButton:hover {
+  background: #ff0040;
+  text-decoration: none;
+}
 
 .Steps {
     display: none;
     width: 100%;
     margin-top: 50px;
+}
+.LocationList {
+    list-style: none;
 }
 #One {
     display: block;
