--- a/Profile/styles.css
+++ b/Profile/styles.css
@@ -45,6 +45,16 @@ input[type="number"] {
     height: 100%;
     background-color: red;
 }
+.SuggestedSizeBox {
+    background-color: lightgray;
+    float: right;
+    width: 50%;
+    height: 173px;
+}
+.Centered {
+    width: 100%;
+    text-align: center;
+}
 .InputBorder {
     border: 1px solid gray;
     width: 185px;
