--- a/Profile/styles.css
+++ b/Profile/styles.css
@@ -4,12 +4,33 @@ body {
 }
 h1,h2,h3,h4,h5,h6,p {
     line-height: 0.6em;
+    color: #454545;
+}
+
+h1,h3 {
+    font-family: LinetoBold;
+}
+h2,p {
+    font-family: LinetoRegular;
 }
 input[type="number"] {
     border: none;
     text-align: center;
     height: 40px;
     width: 60px;
+}
+
+.RadioInputs Label {
+    border: 1px solid lightgray;
+    padding: 10px 20px 10px 20px;
+
+}
+.RadioInputs input[type="radio"]:checked+label{
+    background-color: #fc3c56;
+    border-color: #fc3c56;
+}
+.RadioInputs input {
+    display: none;
 }
 
 .Container {
@@ -113,6 +134,15 @@ input[type="number"] {
     display: block;
 }
 
+@font-face {
+    font-family: LinetoBold;
+    src: url(../Fonts/LinetoBold.woff2);
+}
+
+@font-face {
+    font-family: LinetoRegular;
+    src: url(../Fonts/LinetoRegular.woff2);
+}
 
 @media only screen and (max-width: 960px) {
     .SideBar {
