--- a/Profile/styles.css
+++ b/Profile/styles.css
@@ -2,15 +2,15 @@ body {
     height: 100vh;
     margin: 0;
 }
-h1,h2,h3,h4,h5,h6,p {
-    line-height: 0.6em;
+h1,h2,h3,h4,h5,h6,p,label,input {
     color: #454545;
+
 }
 
 h1,h3 {
     font-family: LinetoBold;
 }
-h2,p {
+h2,p,label {
     font-family: LinetoRegular;
 }
 input[type="number"] {
@@ -25,7 +25,7 @@ input[type="number"] {
     padding: 10px 20px 10px 20px;
 
 }
-.RadioInputs input[type="radio"]:checked+label{
+.RadioInputs input[type="radio"]:checked+label {
     background-color: #fc3c56;
     border-color: #fc3c56;
 }
